2025-08-28T12:42:20Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17296154374 # 1188
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-28
* notice: last 14d: unq all: 44 87
* notice: prev accum: outdated-unq outdated-all / unq all: 4595 9430 / 4665 9516
* notice: next accum: outdated-unq outdated-all / unq all: 4595 9430 / 4666 9517
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-08-28]

2025-08-28T01:41:04Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17283281847 # 1187
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-28
* notice: last 14d: unq all: 44 86
* notice: prev accum: outdated-unq outdated-all / unq all: 4594 9429 / 4662 9511
* notice: next accum: outdated-unq outdated-all / unq all: 4595 9430 / 4665 9516
* notice: prev exec diff / last date diff / accum: unq all: +3 +5 -0 -0 / +8 +11 -0 -0 / 8 11
* notice: removed / changed dates: [2025-08-14] / [2025-08-27]

2025-08-27T12:42:37Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17267013582 # 1186
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-27
* notice: last 14d: unq all: 43 82
* notice: prev accum: outdated-unq outdated-all / unq all: 4590 9425 / 4657 9505
* notice: next accum: outdated-unq outdated-all / unq all: 4594 9429 / 4662 9511
* notice: prev exec diff / last date diff / accum: unq all: +5 +6 -0 -0 / +5 +6 -0 -0 / 5 6
* notice: removed / changed dates: [2025-08-13] / [2025-08-27]

2025-08-27T01:41:43Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17254946669 # 1185