@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-08-28T12:42:20Z",
+  "timestamp" : "2025-08-29T01:41:02Z",
   "count_outdated" : 9430,
   "uniques_outdated" : 4595,
-  "count" : 9517,
-  "uniques" : 4666,
+  "count" : 9522,
+  "uniques" : 4670,
   "clones" : [
     {
       "timestamp": "2025-08-15T00:00:00Z",
@@ -124,12 +124,21 @@
     },
     {
       "timestamp": "2025-08-28T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-08-29T00:00:00Z",
+      "count": 4,
+      "count_minmax": [ 4, 4 ],
+      "count_decinc": [ 0, 4 ],
+      "uniques": 3,
+      "uniques_minmax": [ 3, 3 ],
+      "uniques_decinc": [ 0, 3 ]
     }
   ]
 }
