@@ -1,6 +1,6 @@
 {
-  "count": 87,
-  "uniques": 44,
+  "count": 92,
+  "uniques": 45,
   "clones": [
     {
       "timestamp": "2025-08-15T00:00:00Z",
@@ -69,8 +69,13 @@
     },
     {
       "timestamp": "2025-08-28T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 2,
+      "uniques": 2
+    },
+    {
+      "timestamp": "2025-08-29T00:00:00Z",
+      "count": 4,
+      "uniques": 3
     }
   ]
 }
