@@ -1,3 +1,12 @@
+2025-08-29T01:41:02Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17312308273 # 1189
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-29
+* notice: last 14d: unq all: 45 92
+* notice: prev accum: outdated-unq outdated-all / unq all: 4595 9430 / 4666 9517
+* notice: next accum: outdated-unq outdated-all / unq all: 4595 9430 / 4670 9522
+* notice: prev exec diff / last date diff / accum: unq all: +4 +5 -0 -0 / +3 +4 -0 -0 / 3 4
+* notice: removed / changed dates: [] / [2025-08-28 2025-08-29]
+
 2025-08-28T12:42:20Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17296154374 # 1188
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-28
